added pictures to notebook

--- a/data_analysis_project.ipynb
+++ b/data_analysis_project.ipynb
@@ -2380,13 +2380,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](img/route.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "After filtering out these outliers, the rest of the data looks much more reasonable. However, there are cases, when the starting station is the same as the ending station. That means the rent was \"activated\" and then closed imediately.\n"
    ]
   },
@@ -5957,7 +5950,9 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -5995,6 +5990,13 @@
     "fig.add_layer(stations_layer)\n",
     "fig.add_layer(most_freq_station_layer)\n",
     "fig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](img/map.png)"
    ]
   },
   {
